--- a/ShoutBux-app/package.json
+++ b/ShoutBux-app/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "mantra-core": "^1.2.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
@@ -24,7 +25,7 @@
     "@kadira/storybook": "^1.x.x",
     "enzyme": "^2.2.0",
     "jsdom": "^8.0.4",
-    "eslint": "2.7.x",
+    "eslint": "2.7.x ",
     "eslint-plugin-react": "4.3.x",
     "babel-core": "6.x.x",
     "babel-plugin-react-require": "2.x.x",
